# snakeclef2024

./: .gitignore  README.md  pyproject.toml
snakeclef/: augmentations.py  clean_metadata.ipynb  closedset_model.py  competition_metrics.py  data_distribution.ipynb  datasets.py  evaluate.py  fine_tune_val_set.py  fungiclef_data.py  losses.py  paths.py  performance.ipynb  resize_images.py  test-time-augmentations-optimal-resolution.ipynb  test-time-augmentations-with-batching.ipynb  test-time-augmentations.ipynb  train.ipynb  train.py  train_progressive.py  utils.py
snakeclef/analysis/: get_poison_species_ids.py
snakeclef/conf/: config.yaml
snakeclef/model_checkpoints/2024-05-05 22:41:41.115323/: config_evaluate_20240506-213924.yaml  config_train_20240505-224141.yaml  (+1 more)
snakeclef/models/: MetaFG.py  MetaFG_meta.py
snakeclef/test_time_aug_results/: 576test-time-augmengations-submission.csv  ensemble_multi-instance_multicroptest-time-augmengations-submission.csv  ensembletest-time-augmengations-submission.csv  multi-instance_576test-time-augmengations-submission.csv  multi-instance_multicroptest-time-augmengations-submission.csv  multi-instancetest-time-augmengations-submission.csv  multicroptest-time-augmengations-submission.csv  multiinstance_multicrop_576test-time-augmengations-submission.csv  test-time-augmengations-submission.csv  three_ensemble_576test-time-augmengations-submission.csv  three_ensemble_multi-instance_multicroptest-time-augmengations-submission.csv  three_ensemble_multiinstance_multicrop_576test-time-augmengations-submission.csv
(+96 files in other folders)
